# GocadSGridReader

./: CMakeLists.txt  README.md
GocadSGridReader/: CMakeLists.txt  GocadSGridReader.cpp  GocadSGridReader.h  main.cpp
